[package]
name = "hybrid-indexer"
version = "0.1.1"
edition = "2021"
authors = ["Jonathan Brown"]
description = "A library for indexing events from Substrate blockchains."
homepage = "https://hybridscan.app/"
repository = "https://github.com/hybrid-explorer/hybrid-indexer"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58 = "0.2.0"
blake2 = "0.10.6"
env_logger = "0.10.0"
futures = "0.3.28"
hex = "0.4.3"
hex-literal = "0.4.1"
home = "0.5.5"
log = "0.4.20"
parity-scale-codec = { version = "3.4.0", features = ["derive"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
sled = "0.34.7"
subxt = "0.31.0"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
