[package]
name = "hybrid-indexer"
version = "0.4.0"
edition = "2021"
authors = ["Jonathan Brown"]
description = "A library for indexing events from Substrate blockchains."
homepage = "https://hybridscan.app/"
repository = "https://github.com/hybrid-explorer/hybrid-indexer"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
base58 = "0.2.0"
blake2 = "0.10.6"
byte-unit = "4.0.19"
byteorder = "1.5.0"
futures = "0.3.28"
hex = "0.4.3"
hex-literal = "0.4.1"
home = "0.5.5"
num-format = "0.4.4"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
sled = "0.34.7"
subxt = "0.34.0"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zerocopy = "0.7.8"
zerocopy-derive = "0.7.8"
